feat:修改日志等级,url

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 addopts = -s -v --html=report.html --self-contained-html
+pytest_file = test*.py
+pytest_class = Test*
+pytest_function = test*
