--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -s -v --html=report.html --self-contained-html
+addopts = -s -v --html=./report.html
 pytest_file = test*.py
 pytest_class = Test*
 pytest_function = test*
